--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <h5>Santa Maria La Nova</h5>
-                            <p>Piazza del Popolo - Palata <br>10.30</p>
+                            <p>Piazza del Popolo - Palata (CB) <br>Ore 10.30</p>
                             <p></p>
                         </div>
                         <div class="col-md-4">
