--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" onerror="loadCssFromCDN('animate.css')">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" onerror="loadCssFromCDN('font-awesome.css')">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" integrity="sha512-frwe9LhYfUEW6OPPCXCngaeZ9LqQsvw+HG/kGBcJMby9wGIKNaBieEF8r9sO4b4lJah0OF2tV1iF8q6uymC00w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body id="top">
 <!--[if lt IE 8]>
@@ -377,7 +377,7 @@
 
 <section id="video-bg">
     <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/ClxauicvnBM',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:12, stopAt:180, opacity:1, ratio: '4/3'}">
+         data-property="{videoURL:'https://youtu.be/ClxauicvnBM',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:12, stopAt:180, opacity:1, useOnMobile:true}">
     </div>
     <div id="video-content">
     </div>
@@ -399,7 +399,8 @@
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-4">
-                            <h5>Santa Maria La Nova</h5>
+                            <h5>Cerimonia</h5>
+                            <h4> Chiesa Santa Maria La Nova</h4>
                             <p>Piazza del Popolo - Palata (CB) <br>Ore 10.30</p>
                             <p></p>
                         </div>
@@ -410,7 +411,8 @@
                             <p><i class="fa fa-mobile"></i> <a href="tel://+393208597459">+39 3208597459</a></p>
                         </div>
                         <div class="col-md-4">
-                            <h5>Villa Florio</h5>
+                            <h5>Ricevimento</h5>
+                            <h4>Villa Florio</h4>
                             <p>Via Marconi SS89 Km 26 - San Nicandro Garganico (FG)</p>
                             <p></p>
                         </div>
@@ -474,10 +476,9 @@
                                                                   required>
                             </div>
                         </div>
-                        <!-- Radio button for bus transport-->
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-car"></i><input name="bus" class=""
+                                <i class="fa fa-bus"></i><input name="bus" class=""
                                                                 placeholder="Hai bisogno di un passaggio?"
                                                                 required>
                             </div>
@@ -527,7 +528,7 @@
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
-<script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js" integrity="sha512-B3d7oRuEYeD9qpzSY7SRwqRrQoXo7sub43O6QfJ8q0O6Q9f1Z73c1tT22hSTqpMJ8XD+nA47xt91IBY999i1RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
     // Creating map options
     var mapOptions = {
