Video prop fixing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Max & Pina</title>
+    <title>Pina & Max</title>
     <meta name="description" content="Siamo lieti di invitarvi al nostro matrimonio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <img src="img/pm.png">
-                <h2 id="announcement">Ci sposiamo!</h2>
+                <h1 id="announcement">Ci sposiamo!</h1>
                 <h3 id="date">Quando?</h3>
                 <div id="countdown" class="container">
                     <div class="row">
@@ -130,11 +130,11 @@
                                   <li><span id="seconds"></span>Secondi</li>
                                 </ul>
                               </div>
-                              <h1>10 Giugno 2023</h1>
                             </div>
                         </div>
                     </div>
                 <!-- <div class="share-bar"></div> -->
+                <h1>10 Giugno 2023</h1>
             </div>
         </div>
     </div>
@@ -377,7 +377,7 @@
 
 <section id="video-bg">
     <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/ClxauicvnBM',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:12, stopAt:180, opacity:1, useOnMobile:true}">
+         data-property="{videoURL:'https://youtu.be/ClxauicvnBM',containment:'#video-bg', startAt:12, stopAt:180}">
     </div>
     <div id="video-content">
     </div>
