--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
                 <h4><b><em>Il pensiero più bello che possiate farci è essere con noi nel nostro grande giorno</em></b><br>
                     Se gradite farci un regalo, preferiamo metterlo nel salvadanaio e quando lo useremo in futuro <br> penseremo con gioia a voi e al vostro gesto
                 </h4>
-                <p><i class="fa fa-bank"></i>IT85H0760113200001049138322</p>
-                <p><i class="fa fa-bank"></i>IT19N0100578950000000000091</p>
+                <p><i class="fa fa-bank"></i>La sposa: IT85H0760113200001049138322</p>
+                <p><i class="fa fa-bank"></i>Lo sposo: IT19N0100578950000000000091</p>
             </div>
         </div>
     </div>
