added section with phone numbers

--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@
                         Invia risposta!
                     </button>
                 </form>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        <h5>Max</h5>
+                        <p><i class="fa fa-mobile"></i> <a href="tel://+393456665523">+39 3456665523</a></p>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <h5>Pina</h5>
+                        <p><i class="fa fa-mobile"></i> <a href="tel://+393208597459">+39 3208597459</a></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
